# rng

./: .gitignore  README.adoc
.github/workflows/: build.yaml
app/: build.zig  build.zig.zon
app/src/: main.zig  network.zig
capnp/: client.cpp  run.sh  server.cpp  toc.capnp
client/: Cargo.toml
client/src/: main.rs
docs/: README.adoc  build.yaml
games/: README.adoc
games/jenga/: Cargo.toml
games/jenga/src/: main.rs
games/spcd/: README.adoc  build.zig  build.zig.zon
games/spcd/www/: index.js
games/toc/server/: build.zig.zon
games/toc/server/src/: connection.zig  main.zig
games/zast/: build.zig  build.zig.zon
games/zast/www/: index.html  index.js
memoria/client/: Cargo.toml  Makefile  build.rs  game_worker.js  index.html  index.js  lobby_worker.js  worker.js
memoria/client/src/: game.rs  lib.rs  lobby.rs  router.rs
memoria/client/www/: index.html  index.js  worker_game.js
memoria/proto/: memoria.proto
memoria/server/: Cargo.toml  build.rs
memoria/server/src/: game.rs  lib.rs  lobby.rs  main.rs
protocol/: build.zig  build.zig.zon  protocol.zig
protocol/src/: Set.zig  decoder.zig  mongoose.zig  packets.zig
ren/: README.adoc  build.zig  build.zig.zon
ren/src/: Graphics.zig  main.zig
ren/src/web/: Gl.zig
rmem/client/: Cargo.toml  index.html
rmem/client/src/: lib.rs
rmem/proto/: memoria.proto
rmem/server/: Cargo.toml
rmem/server/src/: main.rs
server/: Cargo.toml  buf.gen.yaml  build.rs  build.zig  build.zig.zon  docker-compose.yml
server/migrations/2024-03-04-102931_create_users/: up.sql
server/proto/: auth.proto  channel.proto  lobby.proto  subtac.proto
server/src/: game.zig  main.rs  main.zig  models.rs  network.zig  schema.rs  server.rs  suptac.rs
server/src/game/: board.rs  mod.rs
server/src/rpc/: auth.rs  channel.rs  lobby.rs  mod.rs
service/: build.zig  build.zig.zon
service/cpp/: proto.cpp
service/proto/: proto.h
service/rpc/: hello.capnp  rpc.cpp  rpc.h
service/src/: game.zig  main.zig  network.zig
stars/: index.js
titacto/: Cargo.toml
toc/app/: build.zig
toc/protocol/: build.zig
toc/server/src/: game.zig  network.zig
web/: .gitignore  angular.json  package-lock.json  package.json
web/src/: styles.css
web/src/app/: app.component.html  app.component.ts  app.routes.ts
web/src/shared/: auth.service.ts  channel.service.ts  lobby.service.ts  subtac.proto  user.service.ts
zet/: build.zig  build.zig.zon
zet/src/: main.zig
(+13 files in other folders)
