[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
prost = "0.12.3"
protobuf = "3.4.0"
protos = { path = "./gen" }
serde = "1.0.197"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"

[workspace]
members = [
    "gen"
]
