[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.3"
protobuf = "3.4.0"
protos = { path = "./gen" }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"
tonic-web = "0.11.0"
uuid = { version = "1.7.0", features = ["v4"] }

[workspace]
members = [
    "gen"
]
