[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.13.5"
tokio-stream = "0.1.17"
tonic = { version = "0.13.0", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = "0.7.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
features = [
    "Window",
    "Event",
    "History",
    "Location",
    "Element",
    "Document",
    "Worker",
    "MessageEvent",
    "HtmlAnchorElement",
]
version = "0.3.77"

[build-dependencies]
tonic-build = { version = "0.13", default-features = false, features = [
    "prost",
] }
