[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
prost = "0.13.5"
rand = "0.9.1"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.13.1"
tonic-web = "0.13.1"
tower-http = { version = "0.6.4", default-features = false, features = ["cors"] }

[build-dependencies]
tonic-build = "*"
